refactor: 필요없는 import 제거 및 getFirst 메서스 변경